# ChangeLog for sci-astronomy/erfa
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-astronomy/erfa/ChangeLog,v 1.1 2013/11/26 17:18:15 bicatali Exp $

*erfa-1.0.1 (26 Nov 2013)

  26 Nov 2013; Sébastien Fabbro <bicatali@gentoo.org> +erfa-1.0.1.ebuild,
  +metadata.xml:
  Initial import