@@ -1,0 +1,16 @@
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/sci-astronomy/erfa/erfa-1.1.0.ebuild,v 1.1 2014/05/28 15:47:22 bicatali Exp $
+
+EAPI=5
+
+inherit autotools-utils
+
+DESCRIPTION="Essential Routines for Fundamental Astronomy"
+HOMEPAGE="https://github.com/liberfa/erfa"
+SRC_URI="https://github.com/liberfa/${PN}/releases/download/v${PV}/${P}.tar.gz"
+
+LICENSE="BSD"
+SLOT="0/1"
+KEYWORDS="~amd64 ~x86 ~amd64-linux ~x86-linux"
+IUSE="static-libs"
